// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Multiple radio mounted html should match snapshot 1`] = `
<div class="container">
    <div role="radiogroup" aria-labelledby="radio-group">
        <label id="radio-group" class="description">
            Radio Group
            <!---->
        </label>
        <div role="radiogroup" class="button-group">
            <div class="button">
                <input type="radio" aria-describedby="" aria-labelledby="radio-group label-radio-1" aria-posinset="0" aria-setsize="2" id="radio-1" name="radio-group" data-vv-as="" data-vv-name="2" data-vv-validate-on="input|blur" data-vv-id="2" aria-required="false"
                    aria-invalid="false">
                <label id="label-radio-1" for="radio-1">
                    Radio
                </label>
            </div>
            <div class="button">
                <input type="radio" aria-describedby="" aria-labelledby="radio-group label-radio-2" aria-posinset="1" aria-setsize="2" id="radio-2" name="radio-group" data-vv-id="3" aria-required="false" aria-invalid="false">
                <label id="label-radio-2" for="radio-2">
                    Radio2
                </label>
            </div>
            <!---->
        </div>
    </div>
</div>
`;

exports[`Multiple radio with all disabled mounted html should match snapshot 1`] = `
<div class="container disabled">
    <div role="radiogroup" aria-labelledby="radio-group">
        <label id="radio-group" class="description">
            Radio Group
            <!---->
        </label>
        <div role="radiogroup" class="button-group">
            <div class="button">
                <input type="radio" aria-describedby="" aria-labelledby="radio-group label-radio-1" aria-posinset="0" aria-setsize="2" disabled="disabled" id="radio-1" name="radio-group" data-vv-as="" data-vv-name="5" data-vv-validate-on="input|blur" data-vv-id="8"
                    aria-required="false" aria-invalid="false">
                <label id="label-radio-1" for="radio-1">
                    Radio
                </label>
            </div>
            <div class="button">
                <input type="radio" aria-describedby="" aria-labelledby="radio-group label-radio-2" aria-posinset="1" aria-setsize="2" disabled="disabled" id="radio-2" name="radio-group" data-vv-id="9" aria-required="false" aria-invalid="false">
                <label id="label-radio-2" for="radio-2">
                    Radio2
                </label>
            </div>
            <!---->
        </div>
    </div>
</div>
`;

exports[`Multiple radio with default mounted html should match snapshot 1`] = `
<div class="container">
    <div role="radiogroup" aria-labelledby="radio-group">
        <label id="radio-group" class="description">
            Radio Group
            <!---->
        </label>
        <div role="radiogroup" class="button-group">
            <div class="button">
                <input type="radio" aria-checked="true" aria-describedby="" aria-labelledby="radio-group label-radio-1" aria-posinset="0" aria-setsize="2" id="radio-1" name="radio-group" data-vv-as="" data-vv-name="3" data-vv-validate-on="input|blur" data-vv-id="4"
                    aria-required="false" aria-invalid="false">
                <label id="label-radio-1" for="radio-1">
                    Radio
                </label>
            </div>
            <div class="button">
                <input type="radio" aria-describedby="" aria-labelledby="radio-group label-radio-2" aria-posinset="1" aria-setsize="2" id="radio-2" name="radio-group" data-vv-id="5" aria-required="false" aria-invalid="false">
                <label id="label-radio-2" for="radio-2">
                    Radio2
                </label>
            </div>
            <!---->
        </div>
    </div>
</div>
`;

exports[`Multiple radio with disabled mounted html should match snapshot 1`] = `
<div class="container">
    <div role="radiogroup" aria-labelledby="radio-group">
        <label id="radio-group" class="description">
            Radio Group
            <!---->
        </label>
        <div role="radiogroup" class="button-group">
            <div class="button">
                <input type="radio" aria-describedby="" aria-labelledby="radio-group label-radio-1" aria-posinset="0" aria-setsize="2" id="radio-1" name="radio-group" data-vv-as="" data-vv-name="4" data-vv-validate-on="input|blur" data-vv-id="6" aria-required="false"
                    aria-invalid="false">
                <label id="label-radio-1" for="radio-1">
                    Radio
                </label>
            </div>
            <div class="button">
                <input type="radio" aria-describedby="" aria-labelledby="radio-group label-radio-2" aria-posinset="1" aria-setsize="2" disabled="disabled" id="radio-2" name="radio-group" data-vv-id="7" aria-required="false" aria-invalid="false">
                <label id="label-radio-2" for="radio-2">
                    Radio2
                </label>
            </div>
            <!---->
        </div>
    </div>
</div>
`;

exports[`Multiple radio with required mounted html should match snapshot 1`] = `
<div class="container">
    <div role="radiogroup" aria-labelledby="radio-group">
        <label id="radio-group" class="description">
            Radio Group<span aria-hidden="true">*</span></label>
        <div role="radiogroup" class="button-group">
            <div class="button">
                <input type="radio" aria-describedby="" aria-labelledby="radio-group label-radio-1" aria-posinset="0" aria-setsize="2" id="radio-1" name="radio-group" data-vv-as="" data-vv-name="6" data-vv-validate-on="input|blur" data-vv-id="10" aria-required="true"
                    aria-invalid="false">
                <label id="label-radio-1" for="radio-1">
                    Radio
                </label>
            </div>
            <div class="button">
                <input type="radio" aria-describedby="" aria-labelledby="radio-group label-radio-2" aria-posinset="1" aria-setsize="2" id="radio-2" name="radio-group" data-vv-id="11" aria-required="false" aria-invalid="false">
                <label id="label-radio-2" for="radio-2">
                    Radio2
                </label>
            </div>
            <!---->
        </div>
    </div>
</div>
`;

exports[`Single radio mounted html should match snapshot 1`] = `
<div class="container">
    <div role="radiogroup" aria-labelledby="radio-group">
        <label id="radio-group" class="description">
            Radio Group
            <!---->
        </label>
        <div role="radiogroup" class="button-group">
            <div class="button">
                <input type="radio" aria-describedby="" aria-labelledby="radio-group label-radio" aria-posinset="0" aria-setsize="1" id="radio" name="radio-group" data-vv-as="" data-vv-name="1" data-vv-validate-on="input|blur" data-vv-id="1" aria-required="false"
                    aria-invalid="false">
                <label id="label-radio" for="radio">
                    Radio
                </label>
            </div>
            <!---->
        </div>
    </div>
</div>
`;
